Created extension method on an IDictionary<string, object> to convert an IDictionary<string, object> to an Expando type.

--- a/Expando/Expando.csproj
+++ b/Expando/Expando.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Utilities\ExpandoExtensions.cs" />
     <Compile Include="Utilities\Utilities.cs" />
     <Compile Include="Expando.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
